kelvinmodesto.cr8s.ee74b4035632cc1fc4ae352a189e09d587a80cd0
Running as unit: run-p2231480-i14811588.scope; invocation ID: 2cea5bc7728148d495299d1c0410d958
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
   Compiling proc-macro2 v1.0.101
   Compiling unicode-ident v1.0.19
   Compiling libc v0.2.175
   Compiling version_check v0.9.5
    Checking cfg-if v1.0.3
    Checking memchr v2.7.5
   Compiling serde_core v1.0.228
    Checking pin-project-lite v0.2.16
   Compiling serde v1.0.228
    Checking bytes v1.10.1
   Compiling zerocopy v0.8.27
    Checking futures-core v0.3.31
    Checking stable_deref_trait v1.2.0
   Compiling find-msvc-tools v0.1.1
   Compiling quote v1.0.40
   Compiling typenum v1.18.0
   Compiling syn v2.0.106
    Checking futures-sink v0.3.31
    Checking socket2 v0.6.0
    Checking signal-hook-registry v1.4.6
    Checking mio v1.0.4
   Compiling shlex v1.3.0
   Compiling generic-array v0.14.7
   Compiling cc v1.2.36
   Compiling proc-macro2-diagnostics v0.10.1
    Checking itoa v1.0.15
   Compiling autocfg v1.5.0
   Compiling yansi v1.0.1
    Checking smallvec v1.15.1
    Checking once_cell v1.21.3
    Checking futures-channel v0.3.31
    Checking pin-utils v0.1.0
    Checking futures-task v0.3.31
    Checking futures-io v0.3.31
    Checking slab v0.4.11
    Checking percent-encoding v2.3.2
    Checking subtle v2.6.1
   Compiling getrandom v0.3.3
    Checking ppv-lite86 v0.2.21
    Checking writeable v0.6.1
    Checking litemap v0.8.0
   Compiling httparse v1.10.1
    Checking log v0.4.28
    Checking bitflags v2.9.4
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
   Compiling time-core v0.1.6
   Compiling num-conv v0.1.0
    Checking digest v0.10.7
   Compiling icu_normalizer_data v2.0.0
   Compiling icu_properties_data v2.0.1
   Compiling time-macros v0.2.24
    Checking hashbrown v0.15.5
    Checking fnv v1.0.7
   Compiling thiserror v2.0.17
   Compiling siphasher v1.0.1
    Checking equivalent v1.0.2
   Compiling phf_shared v0.11.3
   Compiling num-traits v0.2.19
    Checking getrandom v0.2.16
   Compiling cookie v0.18.1
   Compiling vcpkg v0.2.15
   Compiling regex-syntax v0.8.6
   Compiling rand_core v0.6.4
   Compiling pkg-config v0.3.32
    Checking tinyvec_macros v0.1.1
   Compiling ref-cast v1.0.24
    Checking tinyvec v1.10.0
   Compiling rand v0.8.5
   Compiling openssl-sys v0.9.109
    Checking rand_core v0.9.3
   Compiling lock_api v0.4.13
    Checking cpufeatures v0.2.17
    Checking base64 v0.22.1
   Compiling powerfmt v0.2.0
   Compiling parking_lot_core v0.9.11
   Compiling crossbeam-utils v0.8.21
   Compiling regex-automata v0.4.10
   Compiling tracing-core v0.1.34
   Compiling deranged v0.5.3
   Compiling http v0.2.12
   Compiling futures-util v0.3.31
   Compiling phf_generator v0.11.3
   Compiling synstructure v0.13.2
   Compiling regex v1.11.2
    Checking rand_chacha v0.9.0
   Compiling devise_core v0.4.2
    Checking unicode-normalization v0.1.24
    Checking socket2 v0.5.10
   Compiling serde_derive v1.0.228
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling tokio-macros v2.5.0
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
    Checking tokio v1.47.1
   Compiling futures-macro v0.3.31
   Compiling pear_codegen v0.2.9
   Compiling thiserror-impl v2.0.17
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
    Checking zerovec v0.11.4
    Checking zerotrie v0.2.2
   Compiling async-trait v0.1.89
   Compiling ref-cast-impl v1.0.24
    Checking tinystr v0.8.1
    Checking potential_utf v0.1.3
    Checking icu_locale_core v2.0.0
    Checking num_cpus v1.17.0
    Checking icu_collections v2.0.0
    Checking is-terminal v0.4.16
    Checking aho-corasick v1.1.3
   Compiling uncased v0.9.10
    Checking icu_provider v2.0.0
    Checking unicode-bidi v0.3.18
    Checking icu_properties v2.0.1
    Checking indexmap v2.11.1
    Checking icu_normalizer v2.0.0
    Checking unicode-properties v0.1.3
    Checking ryu v1.0.20
    Checking iana-time-zone v0.1.64
   Compiling try-lock v0.2.5
    Checking utf8_iter v1.0.4
    Checking byteorder v1.5.0
    Checking scopeguard v1.2.0
    Checking chrono v0.4.42
   Compiling want v0.3.1
    Checking idna_adapter v1.2.1
    Checking stringprep v0.1.5
    Checking idna v1.1.0
    Checking serde_spanned v0.6.9
    Checking toml_datetime v0.6.11
    Checking tokio-util v0.7.16
    Checking deadpool-runtime v0.1.4
    Checking tracing v0.1.41
   Compiling devise_codegen v0.4.2
   Compiling parse-zoneinfo v0.3.1
    Checking rand v0.9.2
   Compiling time v0.3.43
   Compiling http-body v0.4.6
   Compiling phf_codegen v0.11.3
    Checking phf v0.11.3
    Checking sha2 v0.10.9
    Checking md-5 v0.10.6
    Checking hmac v0.12.1
   Compiling psm v0.1.26
    Checking form_urlencoded v1.2.2
   Compiling ahash v0.8.12
    Checking winnow v0.7.13
   Compiling tower-service v0.3.3
   Compiling httpdate v1.0.3
   Compiling serde_json v1.0.145
    Checking toml_write v0.1.2
   Compiling rustix v1.1.2
    Checking fallible-iterator v0.2.0
   Compiling inlinable_string v0.1.15
   Compiling pq-sys v0.4.8
   Compiling ucd-trie v0.1.7
    Checking pear v0.2.9
   Compiling pest v2.8.2
   Compiling hyper v0.14.32
    Checking postgres-protocol v0.6.8
    Checking toml_edit v0.22.27
   Compiling futures v0.3.31
    Checking url v2.5.7
    Checking crossbeam-epoch v0.9.18
   Compiling chrono-tz-build v0.3.0
    Checking parking_lot v0.12.4
   Compiling devise v0.4.2
    Checking h2 v0.3.27
   Compiling diesel_table_macro_syntax v0.1.0
    Checking rand_chacha v0.3.1
   Compiling stable-pattern v0.1.0
   Compiling stacker v0.1.21
    Checking bstr v1.12.0
   Compiling figment v0.10.19
   Compiling multer v3.1.0
    Checking lazy_static v1.5.0
    Checking linux-raw-sys v0.11.0
    Checking utf8parse v0.2.2
   Compiling state v0.6.0
    Checking mime v0.3.17
    Checking foreign-types-shared v0.1.1
    Checking unic-char-range v0.9.0
    Checking fastrand v2.3.0
    Checking same-file v1.0.6
   Compiling either v1.15.0
   Compiling openssl v0.10.73
    Checking unic-common v0.9.0
   Compiling libm v0.2.15
    Checking unic-ucd-version v0.9.0
   Compiling rocket_http v0.5.1
    Checking walkdir v2.5.0
    Checking unic-char-property v0.9.0
    Checking globset v0.4.16
    Checking foreign-types v0.3.2
    Checking toml v0.8.23
    Checking anstyle-parse v0.2.7
   Compiling diesel_derives v2.1.4
   Compiling chrono-tz v0.9.0
    Checking crossbeam-deque v0.8.6
   Compiling pest_meta v2.8.2
    Checking postgres-types v0.2.9
    Checking combine v4.6.7
   Compiling async-stream-impl v0.3.6
   Compiling openssl-macros v0.1.1
    Checking http v1.3.1
   Compiling rocket v0.5.1
    Checking encoding_rs v0.8.35
    Checking whoami v1.6.1
    Checking anstyle-query v1.1.4
    Checking spin v0.9.8
    Checking is_terminal_polyfill v1.70.1
    Checking colorchoice v1.0.4
   Compiling native-tls v0.2.14
   Compiling glob v0.3.3
    Checking anstyle v1.0.11
    Checking retain_mut v0.1.9
    Checking allocator-api2 v0.2.21
   Compiling unicode-xid v0.2.6
    Checking anstream v0.6.20
   Compiling rocket_codegen v0.5.1
    Checking hashbrown v0.14.5
    Checking deadpool v0.9.5
    Checking tokio-postgres v0.7.13
    Checking async-stream v0.3.6
   Compiling pest_generator v2.8.2
    Checking diesel v2.1.6
    Checking tempfile v3.22.0
    Checking ignore v0.4.23
    Checking unic-ucd-segment v0.9.0
    Checking deadpool v0.12.3
    Checking tokio-stream v0.1.17
    Checking ubyte v0.10.4
    Checking scoped-futures v0.1.4
    Checking strsim v0.11.1
    Checking atomic v0.5.3
    Checking clap_lex v0.7.5
    Checking base64ct v1.8.0
    Checking binascii v0.1.4
    Checking openssl-probe v0.1.6
    Checking deunicode v1.6.2
    Checking password-hash v0.5.0
    Checking slug v0.1.6
    Checking clap_builder v4.5.48
    Checking humansize v2.1.3
    Checking unic-segment v0.9.0
    Checking globwalk v0.9.1
    Checking chumsky v0.9.3
    Checking redis v0.25.4
   Compiling pest_derive v2.8.2
   Compiling rocket_db_pools_codegen v0.2.0
    Checking email-encoding v0.4.1
    Checking blake2 v0.10.6
    Checking hostname v0.4.1
    Checking nom v8.0.0
    Checking quoted_printable v0.5.1
    Checking email_address v0.2.9
    Checking argon2 v0.5.3
    Checking tera v1.20.0
    Checking clap v4.5.48
    Checking deadpool-redis v0.15.1
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.1.6/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

    Checking lettre v0.11.18
For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
